# pico-freertos-lwip

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cmake.txt  flash.sh  led_controller.py  rebuild-clean  reset.sh  tcp_client.py
include/: FreeRTOSConfig.h  lwipopts.h  strip_config.h
scripts/: flash.sh  gdb.sh  init.sh  ocd.sh  parse-board-type.sh  reset.sh  rp2040.cfg  timer-interrupt-rp2040.cfg
src/: apa102.cpp  apa102.h  flash_config.c  hsl_to_rgb.c  hsl_to_rgb.h  main.cpp  network_time.cpp  network_time.h  pico_led.c  pico_led.h  wifi.cpp  wifi.h  wifi_utils.cpp  wifi_utils.h
